DASH-90 DASH-91 Added "grouping_id" column to dash_news_item table, plus support for adding useful values to the column as news items are inserted. Fixed incorrect join (should be left-join) for one mysql query that selects calendar items.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@312987 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/impl/src/resources/mysql.properties
+++ b/impl/src/resources/mysql.properties
@@ -26,8 +26,9 @@ create unique index dash_context_idx on dash_context (context_id)
 create.NewsItem.table = create table if not exists dash_news_item ( id bigint not null auto_increment, news_time datetime not null, \
 news_time_label_key varchar(40) character set ascii, title varchar(255) not null, \
 entity_ref varchar(265) character set ascii not null, entity_type bigint not null, subtype varchar(40), \
-context_id bigint not null, primary key (id) ); \
+context_id bigint not null, grouping_id varchar(90), primary key (id) ); \
 create index dash_news_time_idx on dash_news_item (news_time); \
+create index dash_news_grouping_idx on dash_news_item (grouping_id); \
 create unique index dash_news_entity_idx on dash_news_item (entity_ref)
 
 create.NewsLink.table = create table if not exists dash_news_link ( id bigint not null auto_increment, person_id bigint not null, \
@@ -102,8 +103,8 @@ insert.CalendarLink = insert into dash_calendar_link (person_id, item_id, contex
 
 insert.Context = insert into dash_context (context_id, context_url, context_title) values (?, ?, ?)
 
-insert.NewsItem = insert into dash_news_item (news_time, title, news_time_label_key, entity_ref, subtype, entity_type, context_id) \
-values (?, ?, ?, ?, ?, ?, ?)
+insert.NewsItem = insert into dash_news_item (news_time, title, news_time_label_key, entity_ref, subtype, entity_type, context_id, grouping_id) \
+values (?, ?, ?, ?, ?, ?, ?, ?)
 
 insert.NewsLink = insert into dash_news_link (person_id, item_id, context_id, hidden, sticky) values (?, ?, ?, ?, ?)
 
@@ -171,7 +172,7 @@ site.context_url as site_context_url, site.context_title as site_context_title, 
 rep.id as rep_id, rep.first_time as rep_first_time, rep.last_time as rep_last_time, rep.frequency as rep_frequency, rep.max_count as rep_count, \
 rep.calendar_time_label_key as rep_calendar_time_label_key, rep.title as rep_title, rep.entity_ref as rep_entity_ref, rep.subtype as rep_subtype \
 from dash_calendar_item ci join dash_context site on site.id=ci.context_id join dash_sourcetype st on st.id=ci.entity_type \
-join dash_repeating_event rep on ci.repeating_event_id=rep.id where site.context_id=? 
+left join dash_repeating_event rep on ci.repeating_event_id=rep.id where site.context_id=? 
 
 select.CalendarItems.by.entityReference = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, \
 ci.calendar_time_label_key as ci_calendar_time_label_key, ci.title as ci_title, ci.entity_ref as ci_entity_ref, ci.subtype as ci_subtype, ci.sequence_num as ci_sequence_num, \
