--- a/impl/src/resources/oracle.properties
+++ b/impl/src/resources/oracle.properties
@@ -33,9 +33,10 @@ create unique index dash_context_idx on dash_context (context_id)
 create.NewsItem.table = create table dash_news_item ( id number not null primary key, \
 news_time timestamp(0) not null, news_time_label_key varchar2(40), title varchar2(255) not null, \
 entity_ref varchar2(265) not null, \
-entity_type number not null, subtype varchar2(40), context_id number not null ); \
+entity_type number not null, subtype varchar2(40), context_id number not null, grouping_id varchar2(90) ); \
 create sequence dash_news_item_seq start with 1 increment by 1 nomaxvalue; \
 create index dash_news_time_idx on dash_news_item (news_time); \
+create index dash_news_grouping_idx on dash_news_item (grouping_id); \
 create unique index dash_news_entity_idx on dash_news_item (entity_ref)
 
 create.NewsLink.table = create table dash_news_link \
@@ -114,8 +115,8 @@ values (dash_calendar_link_seq.nextval, ?, ?, ?, ?, ?)
 
 insert.Context = insert into dash_context (id, context_id, context_url, context_title) values (dash_context_seq.nextval, ?, ?, ?)
 
-insert.NewsItem = insert into dash_news_item (id, news_time, title, news_time_label_key, entity_ref, subtype, entity_type, context_id) \
-values (dash_news_item_seq.nextval, ?, ?, ?, ?, ?, ?, ?)
+insert.NewsItem = insert into dash_news_item (id, news_time, title, news_time_label_key, entity_ref, subtype, entity_type, context_id, grouping_id) \
+values (dash_news_item_seq.nextval, ?, ?, ?, ?, ?, ?, ?, ?)
 
 insert.NewsLink = insert into dash_news_link (id, person_id, item_id, context_id, hidden, sticky ) \
 values (dash_news_link_seq.nextval, ?, ?, ?, ?, ?)
