DASH-92 - link targets and labels for item types need to be different
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@312988 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/bundles/resources/dash_entity.properties
+++ b/bundles/resources/dash_entity.properties
@@ -18,7 +18,7 @@ assignment.news.time = Date created: {0}
 assignment.open.time = Open: {0}
 assignment.due.time = Due: {0}
 assignment.close.time = Accept Until: {0}
-assignment.info.link = More info.
+assignment.info.link = View in Site
 assignment.grade.type = Grade: {0} 
 assignment.max.grade = max ({0})
 assignment.submission.status = Status: {0}
@@ -34,7 +34,7 @@ resource.grouped.title = {0} resources added to {1}
 resource.metadata = Posted by {user-name} on {news-time}. 
 
 
-schedule.info.link = More info.
+schedule.info.link = View in Site
 schedule.news.time = Date posted: {0}
 schedule.metadata = Event date: {calendar-time}. Posted on {news-time}
 
