DASH-94 Added support for collapsed items.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@312989 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/bundles/resources/dash_entity.properties
+++ b/bundles/resources/dash_entity.properties
@@ -30,6 +30,7 @@ resource.user.name = Posted by: {0}
 resource.news.time = Date posted: {0}
 resource.info.link = Download this resource.
 resource.grouped.title = {0} resources added to {1}
+resource.added = added
 
 resource.metadata = Posted by {user-name} on {news-time}. 
 
