--- a/impl/src/resources/mysql.properties
+++ b/impl/src/resources/mysql.properties
@@ -338,6 +338,63 @@ site.context_url as site_context_url, site.context_title as site_context_title \
 from dash_news_item ni join dash_context site on site.id=ni.context_id join dash_sourcetype st on st.id=ni.entity_type \
 where site.context_id=? 
 
+select.NewsItems.sakaiId.collapseCount = (select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, \
+ni.news_time_label_key as ni_news_time_label_key, ni.entity_ref as ni_entity_ref, ni.subtype as ni_subtype, ni.grouping_id as ni_group, 1 as ni_count, \
+st.id as type_id, st.identifier as type_identifier, st.access_permission as type_accessPermission, \
+site.id as site_id, site.context_id as site_context_id,  site.context_url as site_context_url, site.context_title as site_context_title,nl.sticky as ni_sticky \
+from (select t4.gr_id as gr_id from (select dni.grouping_id as gr_id,count(*) as gr_ct from dash_person dp join dash_news_link dnl on dp.id=dnl.person_id \
+join dash_news_item dni on dni.id=dnl.item_id \
+where dp.sakai_id=? group by dni.grouping_id) t4 where t4.gr_ct <= ?) t5 \
+join dash_news_item ni on ni.grouping_id=t5.gr_id join dash_context site on site.id=ni.context_id \
+join dash_sourcetype st on st.id=ni.entity_type join dash_news_link nl on ni.id=nl.item_id \
+join dash_person usr on usr.id=nl.person_id where usr.sakai_id=?) \
+union \
+(select  0 as ni_id, t5.g_time as ni_news_time, '' as ni_title, \
+'' as ni_news_time_label_key, ni.grouping_id as ni_entity_ref, '' as ni_subtype, t5.g_id as ni_group, t5.g_count as ni_count, \
+st.id as type_id, st.identifier as type_identifier, st.access_permission as type_accessPermission, \
+site.id as site_id, site.context_id as site_context_id,  site.context_url as site_context_url, site.context_title as site_context_title, '0' as ni_sticky \
+from (select t4.x as g_id,t4.y as g_count,date(t4.z) as g_time from (select dni.grouping_id as x,count(*) as y,max(dni.news_time) as z \
+from dash_person dp join dash_news_link dnl on dp.id=dnl.person_id join dash_news_item dni on dni.id=dnl.item_id join dash_context dc on dnl.context_id=dc.id \
+where dp.sakai_id=? and dnl.hidden='0' group by grouping_id) t4 where t4.y > ?) t5 \
+join dash_news_item ni on ni.grouping_id=t5.g_id \
+join dash_context site on site.id=ni.context_id \
+join dash_sourcetype st on st.id=ni.entity_type) \
+order by ni_news_time desc
+
+select.NewsItems.sakaiId.contextId.collapseCount = (select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, \
+ni.news_time_label_key as ni_news_time_label_key, ni.entity_ref as ni_entity_ref, ni.subtype as ni_subtype, ni.grouping_id as ni_group, 1 as ni_count, \
+st.id as type_id, st.identifier as type_identifier, st.access_permission as type_accessPermission, \
+site.id as site_id, site.context_id as site_context_id,  site.context_url as site_context_url, site.context_title as site_context_title,nl.sticky as ni_sticky \
+from (select t4.gr_id as gr_id from (select dni.grouping_id as gr_id,count(*) as gr_ct from dash_person dp join dash_news_link dnl on dp.id=dnl.person_id \
+join dash_news_item dni on dni.id=dnl.item_id join dash_context dc on dnl.context_id=dc.id \
+where dp.sakai_id=? and dc.context_id=? group by dni.grouping_id) t4 where t4.gr_ct <= ?) t5 \
+join dash_news_item ni on ni.grouping_id=t5.gr_id join dash_context site on site.id=ni.context_id \
+join dash_sourcetype st on st.id=ni.entity_type join dash_news_link nl on ni.id=nl.item_id \
+join dash_person usr on usr.id=nl.person_id where usr.sakai_id=?) \
+union \
+(select  0 as ni_id, t5.g_time as ni_news_time, '' as ni_title, \
+'' as ni_news_time_label_key, ni.grouping_id as ni_entity_ref, '' as ni_subtype, t5.g_id as ni_group, t5.g_count as ni_count, \
+st.id as type_id, st.identifier as type_identifier, st.access_permission as type_accessPermission, \
+site.id as site_id, site.context_id as site_context_id,  site.context_url as site_context_url, site.context_title as site_context_title, '0' as ni_sticky \
+from (select t4.x as g_id,t4.y as g_count,date(t4.z) as g_time from (select dni.grouping_id as x,count(*) as y,max(dni.news_time) as z \
+from dash_person dp join dash_news_link dnl on dp.id=dnl.person_id join dash_news_item dni on dni.id=dnl.item_id join dash_context dc on dnl.context_id=dc.id \
+where dp.sakai_id=? and dc.context_id=? and dnl.hidden='0' group by grouping_id) t4 where t4.y > ?) t5 \
+join dash_news_item ni on ni.grouping_id=t5.g_id \
+join dash_context site on site.id=ni.context_id \
+join dash_sourcetype st on st.id=ni.entity_type) \
+order by ni_news_time desc
+
+select.NewsItems.by.sakaiId.groupId.paged = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, \
+ni.news_time_label_key as ni_news_time_label_key, ni.entity_ref as ni_entity_ref, ni.subtype as ni_subtype, ni.grouping_id as ni_group, 1 as ni_count, \
+st.id as type_id, st.identifier as type_identifier, st.access_permission as type_accessPermission, \
+site.id as site_id, site.context_id as site_context_id,  site.context_url as site_context_url, site.context_title as site_context_title,nl.sticky as ni_sticky \
+from dash_person usr join dash_news_link nl on usr.id=nl.person_id \
+join dash_news_item ni on nl.item_id=ni.id \
+join dash_context site on site.id=ni.context_id \
+join dash_sourcetype st on st.id=ni.entity_type \
+where usr.sakai_id=? and ni.grouping_id=? \
+limit ? offset ?
+
 select.NewsItems.by.sakaiId = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, ni.news_time_label_key as ni_news_time_label_key, \
 ni.entity_ref as ni_entity_ref, ni.subtype as ni_subtype, st.id as type_id, st.identifier as type_identifier, \
 st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
