DASH-95 Attempting to rerender calendar section or news section on clicking a tab.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@312993 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/bundles/resources/dash_entity.properties
+++ b/bundles/resources/dash_entity.properties
@@ -57,5 +57,12 @@ schedule.key15 = Special event:
 schedule.key16 = Web Assignment:  
 schedule.grouped.title = {0} events added to the {1} calendar
 
+dash.calendar.upcoming	= Upcoming
+dash.calendar.past 		= Past
+dash.calendar.starred	= Starred
+dash.calendar.hidden	= Hidden
+dash.news.current		= Current Stuff
+dash.news.starred		= Starred
+dash.news.hidden		= Hidden
 
 
