DASH-95 Included bundle in tool dependencies.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@312995 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/tool/pom.xml
+++ b/tool/pom.xml
@@ -22,6 +22,11 @@
       		<groupId>org.sakaiproject.dash</groupId>
       		<artifactId>dashboard-api</artifactId>
     	</dependency>
+        <dependency>
+            <groupId>org.sakaiproject.dash</groupId>
+			<artifactId>dashboard-bundles</artifactId>
+        </dependency>
+
     	
     	<!-- third party dependencies -->
 		<dependency>
