--- a/impl/src/resources/hsqldb.properties
+++ b/impl/src/resources/hsqldb.properties
@@ -125,7 +125,8 @@ select.AvailabilityChecks.before.date = select * from dash_availability_check wh
 select.AvailabilityChecks.by.entityReference = select * from dash_availability_check where entity_ref = ?
 
 select.CalendarItem.by.entityReference.calendarTimeLabelKey = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, \
-ci.calendar_time_label_key as ci_calendar_time_label_key, ci.title as ci_title, ci.entity_ref as ci_entity_ref, ci.subtype as ci_subtype,  ci.sequence_num as ci_sequence_num, \
+ci.calendar_time_label_key as ci_calendar_time_label_key, ci.title as ci_title, ci.entity_ref as ci_entity_ref, \
+ci.subtype as ci_subtype,  ci.sequence_num as ci_sequence_num, \
 st.id as type_id, st.identifier as type_identifier, st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
 site.context_url as site_context_url, site.context_title as site_context_title, \
 rep.id as rep_id, rep.first_time as rep_first_time, rep.last_time as rep_last_time, rep.frequency as rep_frequency, rep.max_count as rep_count, \
@@ -135,7 +136,8 @@ join dash_sourcetype st on st.id=ci.entity_type left join dash_repeating_event r
 where ci.entity_ref=? and ci.calendar_time_label_key=?
 
 select.CalendarItem.by.entityReference.calendarTimeLabelKey.sequenceNumber = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, \
-ci.calendar_time_label_key as ci_calendar_time_label_key, ci.title as ci_title, ci.entity_ref as ci_entity_ref, ci.subtype as ci_subtype,  ci.sequence_num as ci_sequence_num, \
+ci.calendar_time_label_key as ci_calendar_time_label_key, ci.title as ci_title, ci.entity_ref as ci_entity_ref, \
+ci.subtype as ci_subtype,  ci.sequence_num as ci_sequence_num, \
 st.id as type_id, st.identifier as type_identifier, st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
 site.context_url as site_context_url, site.context_title as site_context_title, \
 rep.id as rep_id, rep.first_time as rep_first_time, rep.last_time as rep_last_time, rep.frequency as rep_frequency, rep.max_count as rep_count, \
@@ -145,7 +147,8 @@ join dash_sourcetype st on st.id=ci.entity_type left join dash_repeating_event r
 where ci.entity_ref=? and ci.calendar_time_label_key=? and ci.sequence_num=?
 
 select.CalendarItem.by.id = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, \
-ci.calendar_time_label_key as ci_calendar_time_label_key, ci.title as ci_title, ci.entity_ref as ci_entity_ref, ci.subtype as ci_subtype,  ci.sequence_num as ci_sequence_num, \
+ci.calendar_time_label_key as ci_calendar_time_label_key, ci.title as ci_title, ci.entity_ref as ci_entity_ref, \
+ci.subtype as ci_subtype,  ci.sequence_num as ci_sequence_num, \
 st.id as type_id, st.identifier as type_identifier, st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
 site.context_url as site_context_url, site.context_title as site_context_title, \
 rep.id as rep_id, rep.first_time as rep_first_time, rep.last_time as rep_last_time, rep.frequency as rep_frequency, rep.max_count as rep_count, \
@@ -154,7 +157,8 @@ from dash_calendar_item ci join dash_context site on site.id=ci.context_id  \
 join dash_sourcetype st on st.id=ci.entity_type left join dash_repeating_event rep on ci.repeating_event_id=rep.id where ci.id=?
 
 select.CalendarItems.by.contextId = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, \
-ci.calendar_time_label_key as ci_calendar_time_label_key, ci.title as ci_title, ci.entity_ref as ci_entity_ref, ci.subtype as ci_subtype,  ci.sequence_num as ci_sequence_num, \
+ci.calendar_time_label_key as ci_calendar_time_label_key, ci.title as ci_title, ci.entity_ref as ci_entity_ref, \
+ci.subtype as ci_subtype,  ci.sequence_num as ci_sequence_num, \
 st.id as type_id, st.identifier as type_identifier, \
 st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
 site.context_url as site_context_url, site.context_title as site_context_title, \
@@ -165,7 +169,8 @@ join dash_repeating_event rep on ci.repeating_event_id=rep.id \
 where site.context_id=? 
 
 select.CalendarItems.by.entityReference = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, \
-ci.calendar_time_label_key as ci_calendar_time_label_key, ci.title as ci_title, ci.entity_ref as ci_entity_ref, ci.subtype as ci_subtype,  ci.sequence_num as ci_sequence_num, \
+ci.calendar_time_label_key as ci_calendar_time_label_key, ci.title as ci_title, ci.entity_ref as ci_entity_ref, \
+ci.subtype as ci_subtype,  ci.sequence_num as ci_sequence_num, \
 st.id as type_id, st.identifier as type_identifier, st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
 site.context_url as site_context_url, site.context_title as site_context_title, \
 rep.id as rep_id, rep.first_time as rep_first_time, rep.last_time as rep_last_time, rep.frequency as rep_frequency, rep.max_count as rep_count, \
@@ -174,7 +179,8 @@ from dash_calendar_item ci join dash_context site on site.id=ci.context_id  \
 join dash_sourcetype st on st.id=ci.entity_type left join dash_repeating_event rep on ci.repeating_event_id=rep.id where ci.entity_ref=?
 
 select.CalendarItems.by.sakaiId = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, \
-ci.calendar_time_label_key as ci_calendar_time_label_key, ci.title as ci_title, ci.entity_ref as ci_entity_ref, ci.subtype as ci_subtype,  ci.sequence_num as ci_sequence_num, \
+ci.calendar_time_label_key as ci_calendar_time_label_key, ci.title as ci_title, ci.entity_ref as ci_entity_ref, \
+ci.subtype as ci_subtype,  ci.sequence_num as ci_sequence_num, \
 st.id as type_id, st.identifier as type_identifier, st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
 site.context_url as site_context_url, site.context_title as site_context_title, \
 rep.id as rep_id, rep.first_time as rep_first_time, rep.last_time as rep_last_time, rep.frequency as rep_frequency, rep.max_count as rep_count, \
@@ -184,7 +190,8 @@ join dash_context site on site.id=ci.context_id join dash_sourcetype st on st.id
 where usr.sakai_id=? order by ci.calendar_time asc
 
 select.CalendarItems.by.sakaiId.contextId = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, \
-ci.calendar_time_label_key as ci_calendar_time_label_key, ci.title as ci_title, ci.entity_ref as ci_entity_ref, ci.subtype as ci_subtype,  ci.sequence_num as ci_sequence_num, \
+ci.calendar_time_label_key as ci_calendar_time_label_key, ci.title as ci_title, ci.entity_ref as ci_entity_ref, \
+ci.subtype as ci_subtype,  ci.sequence_num as ci_sequence_num, \
 st.id as type_id, st.identifier as type_identifier, st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
 site.context_url as site_context_url, site.context_title as site_context_title, \
 rep.id as rep_id, rep.first_time as rep_first_time, rep.last_time as rep_last_time, rep.frequency as rep_frequency, rep.max_count as rep_count, \
@@ -194,16 +201,108 @@ join dash_context site on site.id=ci.context_id join dash_sourcetype st on st.id
 where usr.sakai_id=? and site.context_id=? order by ci.calendar_time asc
 
 select.CalendarLink.by.calendarItemId.personId = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, \
-ci.calendar_time_label_key as ci_calendar_time_label_key, ci.title as ci_title, ci.entity_ref as ci_entity_ref, ci.subtype as ci_subtype,  ci.sequence_num as ci_sequence_num, \
-st.id as type_id, st.identifier as type_identifier, st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
+ci.calendar_time_label_key as ci_calendar_time_label_key, ci.title as ci_title, ci.entity_ref as ci_entity_ref, \
+ci.subtype as ci_subtype,  ci.sequence_num as ci_sequence_num, \
+st.id as type_id, st.identifier as type_identifier, st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id, \
 site.context_url as site_context_url, site.context_title as site_context_title, \
 rep.id as rep_id, rep.first_time as rep_first_time, rep.last_time as rep_last_time, rep.frequency as rep_frequency, rep.max_count as rep_count, \
-rep.calendar_time_label_key as rep_calendar_time_label_key, rep.title as rep_title, rep.entity_ref as rep_entity_ref, rep.subtype as rep_subtype, \  
+rep.calendar_time_label_key as rep_calendar_time_label_key, rep.title as rep_title, rep.entity_ref as rep_entity_ref, rep.subtype as rep_subtype, \ 
 usr.id as p_id, usr.sakai_id as p_sakai_id, usr.user_id as p_user_id,  \
 link.id as link_id, link.hidden as link_hidden, link.sticky as link_sticky \
 from dash_calendar_link link join dash_person usr on usr.id=link.person_id join dash_calendar_item ci on ci.id=link.item_id \
 join dash_context site on site.id=ci.context_id join dash_sourcetype st on st.id=ci.entity_type left join dash_repeating_event rep on ci.repeating_event_id=rep.id \
 where link.item_id=? and link.person_id=?
+
+select.CalendarLink.by.id = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, \
+ci.calendar_time_label_key as ci_calendar_time_label_key, ci.title as ci_title, ci.entity_ref as ci_entity_ref, \
+ci.subtype as ci_subtype, ci.sequence_num as ci_sequence_num, \
+st.id as type_id, st.identifier as type_identifier, st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
+site.context_url as site_context_url, site.context_title as site_context_title, \
+usr.id as p_id, usr.sakai_id as p_sakai_id, usr.user_id as p_user_id,  \
+link.id as link_id, link.hidden as link_hidden, link.sticky as link_sticky, \
+rep.id as rep_id, rep.first_time as rep_first_time, rep.last_time as rep_last_time, rep.frequency as rep_frequency, rep.max_count as rep_count, \
+rep.calendar_time_label_key as rep_calendar_time_label_key, rep.title as rep_title, rep.entity_ref as rep_entity_ref, rep.subtype as rep_subtype \
+from dash_calendar_link link join dash_person usr on usr.id=link.person_id join dash_calendar_item ci on ci.id=link.item_id \
+join dash_context site on site.id=ci.context_id join dash_sourcetype st on st.id=ci.entity_type left join dash_repeating_event rep on ci.repeating_event_id=rep.id \
+where link.id=?
+
+select.future.CalendarLinks.by.sakaiId.hidden = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, \
+ci.calendar_time_label_key as ci_calendar_time_label_key, ci.title as ci_title, ci.entity_ref as ci_entity_ref, \
+ci.subtype as ci_subtype, ci.sequence_num as ci_sequence_num, \
+st.id as type_id, st.identifier as type_identifier, st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
+site.context_url as site_context_url, site.context_title as site_context_title, \
+usr.id as p_id, usr.sakai_id as p_sakai_id, usr.user_id as p_user_id,  \
+link.id as link_id, link.hidden as link_hidden, link.sticky as link_sticky, \
+rep.id as rep_id, rep.first_time as rep_first_time, rep.last_time as rep_last_time, rep.frequency as rep_frequency, rep.max_count as rep_count, \
+rep.calendar_time_label_key as rep_calendar_time_label_key, rep.title as rep_title, rep.entity_ref as rep_entity_ref, rep.subtype as rep_subtype \
+from dash_calendar_link link join dash_person usr on usr.id=link.person_id join dash_calendar_item ci on ci.id=link.item_id \
+join dash_context site on site.id=ci.context_id join dash_sourcetype st on st.id=ci.entity_type left join dash_repeating_event rep on ci.repeating_event_id=rep.id \
+where usr.sakai_id=? and link.hidden=? and ci.calendar_time>? order by ci.calendar_time asc
+
+select.future.CalendarLinks.by.sakaiId.contextId.hidden = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, \
+ci.calendar_time_label_key as ci_calendar_time_label_key, ci.title as ci_title, ci.entity_ref as ci_entity_ref, \
+ci.subtype as ci_subtype, ci.sequence_num as ci_sequence_num, \
+st.id as type_id, st.identifier as type_identifier, st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
+site.context_url as site_context_url, site.context_title as site_context_title, \
+usr.id as p_id, usr.sakai_id as p_sakai_id, usr.user_id as p_user_id,  \
+link.id as link_id, link.hidden as link_hidden, link.sticky as link_sticky, \
+rep.id as rep_id, rep.first_time as rep_first_time, rep.last_time as rep_last_time, rep.frequency as rep_frequency, rep.max_count as rep_count, \
+rep.calendar_time_label_key as rep_calendar_time_label_key, rep.title as rep_title, rep.entity_ref as rep_entity_ref, rep.subtype as rep_subtype \
+from dash_calendar_link link join dash_person usr on usr.id=link.person_id join dash_calendar_item ci on ci.id=link.item_id \
+join dash_context site on site.id=ci.context_id join dash_sourcetype st on st.id=ci.entity_type left join dash_repeating_event rep on ci.repeating_event_id=rep.id \
+where usr.sakai_id=? and site.context_id=? and link.hidden=? and ci.calendar_time>? order by ci.calendar_time asc
+
+select.past.CalendarLinks.by.sakaiId.hidden = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, \
+ci.calendar_time_label_key as ci_calendar_time_label_key, ci.title as ci_title, ci.entity_ref as ci_entity_ref, \
+ci.subtype as ci_subtype, ci.sequence_num as ci_sequence_num, \
+st.id as type_id, st.identifier as type_identifier, st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
+site.context_url as site_context_url, site.context_title as site_context_title, \
+usr.id as p_id, usr.sakai_id as p_sakai_id, usr.user_id as p_user_id,  \
+link.id as link_id, link.hidden as link_hidden, link.sticky as link_sticky, \
+rep.id as rep_id, rep.first_time as rep_first_time, rep.last_time as rep_last_time, rep.frequency as rep_frequency, rep.max_count as rep_count, \
+rep.calendar_time_label_key as rep_calendar_time_label_key, rep.title as rep_title, rep.entity_ref as rep_entity_ref, rep.subtype as rep_subtype \
+from dash_calendar_link link join dash_person usr on usr.id=link.person_id join dash_calendar_item ci on ci.id=link.item_id \
+join dash_context site on site.id=ci.context_id join dash_sourcetype st on st.id=ci.entity_type left join dash_repeating_event rep on ci.repeating_event_id=rep.id \
+where usr.sakai_id=? and link.hidden=? and ci.calendar_time<? order by ci.calendar_time desc
+
+select.past.CalendarLinks.by.sakaiId.contextId.hidden = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, \
+ci.calendar_time_label_key as ci_calendar_time_label_key, ci.title as ci_title, ci.entity_ref as ci_entity_ref, \
+ci.subtype as ci_subtype, ci.sequence_num as ci_sequence_num, \
+st.id as type_id, st.identifier as type_identifier, st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
+site.context_url as site_context_url, site.context_title as site_context_title, \
+usr.id as p_id, usr.sakai_id as p_sakai_id, usr.user_id as p_user_id,  \
+link.id as link_id, link.hidden as link_hidden, link.sticky as link_sticky, \
+rep.id as rep_id, rep.first_time as rep_first_time, rep.last_time as rep_last_time, rep.frequency as rep_frequency, rep.max_count as rep_count, \
+rep.calendar_time_label_key as rep_calendar_time_label_key, rep.title as rep_title, rep.entity_ref as rep_entity_ref, rep.subtype as rep_subtype \
+from dash_calendar_link link join dash_person usr on usr.id=link.person_id join dash_calendar_item ci on ci.id=link.item_id \
+join dash_context site on site.id=ci.context_id join dash_sourcetype st on st.id=ci.entity_type left join dash_repeating_event rep on ci.repeating_event_id=rep.id \
+where usr.sakai_id=? and site.context_id=? and link.hidden=? and ci.calendar_time<? order by ci.calendar_time desc
+
+select.starred.CalendarLinks.by.sakaiId = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, \
+ci.calendar_time_label_key as ci_calendar_time_label_key, ci.title as ci_title, ci.entity_ref as ci_entity_ref, \
+ci.subtype as ci_subtype, ci.sequence_num as ci_sequence_num, \
+st.id as type_id, st.identifier as type_identifier, st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
+site.context_url as site_context_url, site.context_title as site_context_title, \
+usr.id as p_id, usr.sakai_id as p_sakai_id, usr.user_id as p_user_id,  \
+link.id as link_id, link.hidden as link_hidden, link.sticky as link_sticky, \
+rep.id as rep_id, rep.first_time as rep_first_time, rep.last_time as rep_last_time, rep.frequency as rep_frequency, rep.max_count as rep_count, \
+rep.calendar_time_label_key as rep_calendar_time_label_key, rep.title as rep_title, rep.entity_ref as rep_entity_ref, rep.subtype as rep_subtype \
+from dash_calendar_link link join dash_person usr on usr.id=link.person_id join dash_calendar_item ci on ci.id=link.item_id \
+join dash_context site on site.id=ci.context_id join dash_sourcetype st on st.id=ci.entity_type left join dash_repeating_event rep on ci.repeating_event_id=rep.id \
+where usr.sakai_id=? and link.sticky='1' order by ci.calendar_time asc
+
+select.starred.CalendarLinks.by.sakaiId.contextId = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, \
+ci.calendar_time_label_key as ci_calendar_time_label_key, ci.title as ci_title, ci.entity_ref as ci_entity_ref, \
+ci.subtype as ci_subtype, ci.sequence_num as ci_sequence_num, \
+st.id as type_id, st.identifier as type_identifier, st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
+site.context_url as site_context_url, site.context_title as site_context_title, \
+usr.id as p_id, usr.sakai_id as p_sakai_id, usr.user_id as p_user_id,  \
+link.id as link_id, link.hidden as link_hidden, link.sticky as link_sticky, \
+rep.id as rep_id, rep.first_time as rep_first_time, rep.last_time as rep_last_time, rep.frequency as rep_frequency, rep.max_count as rep_count, \
+rep.calendar_time_label_key as rep_calendar_time_label_key, rep.title as rep_title, rep.entity_ref as rep_entity_ref, rep.subtype as rep_subtype \
+from dash_calendar_link link join dash_person usr on usr.id=link.person_id join dash_calendar_item ci on ci.id=link.item_id \
+join dash_context site on site.id=ci.context_id join dash_sourcetype st on st.id=ci.entity_type left join dash_repeating_event rep on ci.repeating_event_id=rep.id \
+where usr.sakai_id=? and site.context_id=? and link.sticky='1' order by ci.calendar_time asc
 
 select.Context.by.id = select site.id as site_id, site.context_id as site_context_id,  \
 site.context_url as site_context_url, site.context_title as site_context_title from dash_context site where site.id=?
