DASH-95 Worked out most details of switching views within the News section.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@312997 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/impl/src/resources/mysql.properties
+++ b/impl/src/resources/mysql.properties
@@ -557,8 +557,9 @@ from dash_person usr join dash_news_link link on usr.id=link.person_id join dash
 join dash_context site on site.id=ni.context_id join dash_sourcetype st on st.id=ni.entity_type \
 where usr.sakai_id=? and site.context_id=? and link.hidden='1' order by ni.news_time desc
 
-select.NewsLink.by.newsItemId.personId = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, ni.news_time_label_key as ni_news_time_label_key, \
-ni.entity_ref as ni_entity_ref, ni.subtype as ni_subtype, st.id as type_id, st.identifier as type_identifier, \
+select.NewsLink.by.newsItemId.personId = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, \
+ni.news_time_label_key as ni_news_time_label_key, ni.entity_ref as ni_entity_ref, ni.subtype as ni_subtype, \
+st.id as type_id, st.identifier as type_identifier, \
 st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
 site.context_url as site_context_url, site.context_title as site_context_title, \
 usr.id as p_id, usr.sakai_id as p_sakai_id, usr.user_id as p_user_id,  \
@@ -566,6 +567,83 @@ link.id as link_id, link.hidden as link_hidden, link.sticky as link_sticky \
 from dash_news_link link join dash_person usr on usr.id=link.person_id join dash_news_item ni on ni.id=link.item_id \
 join dash_context site on site.id=ni.context_id join dash_sourcetype st on st.id=ni.entity_type \
 where link.item_id=? and link.person_id=?
+
+select.NewsLink.by.id = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, \
+ni.news_time_label_key as ni_news_time_label_key, ni.entity_ref as ni_entity_ref, ni.subtype as ni_subtype, \
+st.id as type_id, st.identifier as type_identifier, \
+st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
+site.context_url as site_context_url, site.context_title as site_context_title, \
+usr.id as p_id, usr.sakai_id as p_sakai_id, usr.user_id as p_user_id,  \
+link.id as link_id, link.hidden as link_hidden, link.sticky as link_sticky \
+from dash_news_link link join dash_person usr on usr.id=link.person_id join dash_news_item ni on ni.id=link.item_id \
+join dash_context site on site.id=ni.context_id join dash_sourcetype st on st.id=ni.entity_type \
+where link.id=? 
+
+select.current.NewsLinks.by.sakaiUserId = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, \
+ni.news_time_label_key as ni_news_time_label_key, ni.entity_ref as ni_entity_ref, ni.subtype as ni_subtype, \
+st.id as type_id, st.identifier as type_identifier, \
+st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
+site.context_url as site_context_url, site.context_title as site_context_title, \
+usr.id as p_id, usr.sakai_id as p_sakai_id, usr.user_id as p_user_id,  \
+link.id as link_id, link.hidden as link_hidden, link.sticky as link_sticky \
+from dash_news_link link join dash_person usr on usr.id=link.person_id join dash_news_item ni on ni.id=link.item_id \
+join dash_context site on site.id=ni.context_id join dash_sourcetype st on st.id=ni.entity_type \
+where usr.sakai_id=? and link.hidden='0' order by ni.news_time asc
+
+select.current.NewsLinks.by.sakaiUserId.contextId = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, \
+ni.news_time_label_key as ni_news_time_label_key, ni.entity_ref as ni_entity_ref, ni.subtype as ni_subtype, \
+st.id as type_id, st.identifier as type_identifier, \
+st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
+site.context_url as site_context_url, site.context_title as site_context_title, \
+usr.id as p_id, usr.sakai_id as p_sakai_id, usr.user_id as p_user_id,  \
+link.id as link_id, link.hidden as link_hidden, link.sticky as link_sticky \
+from dash_news_link link join dash_person usr on usr.id=link.person_id join dash_news_item ni on ni.id=link.item_id \
+join dash_context site on site.id=ni.context_id join dash_sourcetype st on st.id=ni.entity_type \
+where usr.sakai_id=? and site.context_id=? and link.hidden='0' order by ni.news_time asc
+
+select.starred.NewsLinks.by.sakaiUserId = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, \
+ni.news_time_label_key as ni_news_time_label_key, ni.entity_ref as ni_entity_ref, ni.subtype as ni_subtype, \
+st.id as type_id, st.identifier as type_identifier, \
+st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
+site.context_url as site_context_url, site.context_title as site_context_title, \
+usr.id as p_id, usr.sakai_id as p_sakai_id, usr.user_id as p_user_id,  \
+link.id as link_id, link.hidden as link_hidden, link.sticky as link_sticky \
+from dash_news_link link join dash_person usr on usr.id=link.person_id join dash_news_item ni on ni.id=link.item_id \
+join dash_context site on site.id=ni.context_id join dash_sourcetype st on st.id=ni.entity_type \
+where usr.sakai_id=? and link.sticky='1' order by ni.news_time asc
+
+select.starred.NewsLinks.by.sakaiUserId.contextId = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, \
+ni.news_time_label_key as ni_news_time_label_key, ni.entity_ref as ni_entity_ref, ni.subtype as ni_subtype, \
+st.id as type_id, st.identifier as type_identifier, \
+st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
+site.context_url as site_context_url, site.context_title as site_context_title, \
+usr.id as p_id, usr.sakai_id as p_sakai_id, usr.user_id as p_user_id,  \
+link.id as link_id, link.hidden as link_hidden, link.sticky as link_sticky \
+from dash_news_link link join dash_person usr on usr.id=link.person_id join dash_news_item ni on ni.id=link.item_id \
+join dash_context site on site.id=ni.context_id join dash_sourcetype st on st.id=ni.entity_type \
+where usr.sakai_id=? and site.context_id=? and link.sticky='1' order by ni.news_time asc
+
+select.hidden.NewsLinks.by.sakaiUserId = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, \
+ni.news_time_label_key as ni_news_time_label_key, ni.entity_ref as ni_entity_ref, ni.subtype as ni_subtype, \
+st.id as type_id, st.identifier as type_identifier, \
+st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
+site.context_url as site_context_url, site.context_title as site_context_title, \
+usr.id as p_id, usr.sakai_id as p_sakai_id, usr.user_id as p_user_id,  \
+link.id as link_id, link.hidden as link_hidden, link.sticky as link_sticky \
+from dash_news_link link join dash_person usr on usr.id=link.person_id join dash_news_item ni on ni.id=link.item_id \
+join dash_context site on site.id=ni.context_id join dash_sourcetype st on st.id=ni.entity_type \
+where usr.sakai_id=? and link.hidden='1' order by ni.news_time asc
+
+select.hidden.NewsLinks.by.sakaiUserId.contextId = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, \
+ni.news_time_label_key as ni_news_time_label_key, ni.entity_ref as ni_entity_ref, ni.subtype as ni_subtype, \
+st.id as type_id, st.identifier as type_identifier, \
+st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
+site.context_url as site_context_url, site.context_title as site_context_title, \
+usr.id as p_id, usr.sakai_id as p_sakai_id, usr.user_id as p_user_id,  \
+link.id as link_id, link.hidden as link_hidden, link.sticky as link_sticky \
+from dash_news_link link join dash_person usr on usr.id=link.person_id join dash_news_item ni on ni.id=link.item_id \
+join dash_context site on site.id=ni.context_id join dash_sourcetype st on st.id=ni.entity_type \
+where usr.sakai_id=? and site.context_id=? and link.hidden='1' order by ni.news_time asc
 
 select.Person.by.id = select id as p_id, sakai_id as p_sakai_id, user_id as p_user_id from dash_person where id=?
 
