--- a/bundles/resources/dash_entity.properties
+++ b/bundles/resources/dash_entity.properties
@@ -57,12 +57,22 @@ schedule.key15 = Special event:
 schedule.key16 = Web Assignment:  
 schedule.grouped.title = {0} events added to the {1} calendar
 
-dash.calendar.upcoming	= Upcoming
-dash.calendar.past 		= Past
-dash.calendar.starred	= Starred
-dash.calendar.hidden	= Hidden
-dash.news.current		= Current Stuff
-dash.news.starred		= Starred
-dash.news.hidden		= Hidden
+dash.calendar.upcoming		= Upcoming
+dash.calendar.past 			= Past
+dash.calendar.starred		= Starred
+dash.calendar.hidden		= Hidden
 
+dash.calendar.noupcoming	= You have no upcoming calendar items.
+dash.calendar.nopast 		= You have no past calendar items.
+dash.calendar.nostarred		= You have not starred any calendar items.
+dash.calendar.nohidden		= You have not hidden any calendar items.
+dash.calendar.linksCount		= {0} items
 
+dash.news.current			= Current Stuff
+dash.news.starred			= Starred
+dash.news.hidden			= Hidden
+
+dash.news.nocurrent			= You have no recent items.
+dash.news.nostarred			= You have not starred any recent items. 
+dash.news.nohidden			= You have not hidden any recent items.
+dash.news.linksCount		= {0} items
