DASH-98 DASH-105 Switched star/unstar and hide/show to icons
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@313009 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/bundles/resources/dash_entity.properties
+++ b/bundles/resources/dash_entity.properties
@@ -76,3 +76,9 @@ dash.news.nocurrent			= You have no recent items.
 dash.news.nostarred			= You have not starred any recent items. 
 dash.news.nohidden			= You have not hidden any recent items.
 dash.news.linksCount		= {0} items
+
+dash.star	= Star this
+dash.unstar	= Unstar this
+dash.hide	= Hide this
+dash.show	= Show this
+
