DASH-97 Fixed display of item counts associated with paging navigator and resize page after changes.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@313011 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/bundles/resources/dash_entity.properties
+++ b/bundles/resources/dash_entity.properties
@@ -67,6 +67,10 @@ dash.calendar.nopast 		= You have no past calendar items.
 dash.calendar.nostarred		= You have not starred any calendar items.
 dash.calendar.nohidden		= You have not hidden any calendar items.
 dash.calendar.linksCount		= {0} items
+dash.calendar.linksCount0		= No items
+dash.calendar.linksCount1		= Showing 1 item
+dash.calendar.linksCount2		= Showing item {0} of {1} items
+dash.calendar.linksCount3		= Showing {0} to {1} of {2} items
 
 dash.news.current			= Current Stuff
 dash.news.starred			= Starred
@@ -75,7 +79,12 @@ dash.news.hidden			= Hidden
 dash.news.nocurrent			= You have no recent items.
 dash.news.nostarred			= You have not starred any recent items. 
 dash.news.nohidden			= You have not hidden any recent items.
+
 dash.news.linksCount		= {0} items
+dash.news.linksCount0		= No items
+dash.news.linksCount1		= Showing 1 item
+dash.news.linksCount2		= Showing item {0} of {1} items
+dash.news.linksCount3		= Showing {0} to {1} of {2} items
 
 dash.star	= Star this
 dash.unstar	= Unstar this
