DASH-93 Provide a backup source for a title if getting the title for a collapsed group fails.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@313016 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/bundles/resources/dash_entity.properties
+++ b/bundles/resources/dash_entity.properties
@@ -91,3 +91,5 @@ dash.unstar	= Unstar this
 dash.hide	= Hide this
 dash.show	= Show this
 
+dash.grouped.title = {0} items of type {1} added to the {2} site
+
