DASH-106 Added first pass at dash config.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@313021 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/impl/src/resources/mysql.properties
+++ b/impl/src/resources/mysql.properties
@@ -19,6 +19,14 @@ person_id bigint not null, context_id bigint not null, item_id bigint not null, 
 sticky bit default 0, unique (person_id, context_id, item_id), primary key (id) ); \
 create index dash_calendar_link_idx on dash_calendar_link (person_id, context_id, item_id, hidden, sticky)
 
+create.Config.table = create table if not exists dash_config ( id bigint not null auto_increment, \
+property_name varchar(99) not null, property_value integer not null ); \
+insert into dash_config (property_name, property_value) values ('PROP_DEFAULT_ITEMS_IN_PANEL', 5); \
+insert into dash_config (property_name, property_value) values ('PROP_DEFAULT_ITEMS_IN_DISCLOSURE', 20); \
+insert into dash_config (property_name, property_value) values ('PROP_DEFAULT_ITEMS_IN_GROUP', 2); \
+insert into dash_config (property_name, property_value) values ('PROP_REMOVE_ITEMS_AFTER_WEEKS', 52); \
+insert into dash_config (property_name, property_value) values ('PROP_REMOVE_STARRED_ITEMS_AFTER_WEEKS', 26)
+
 create.Context.table = create table if not exists dash_context ( id bigint not null auto_increment, context_id varchar(255) not null, \
 context_url varchar(1024) not null, context_title varchar(255) not null, primary key (id) ); \
 create unique index dash_context_idx on dash_context (context_id)
@@ -77,6 +85,10 @@ delete.CalendarLinks.by.itemId = delete from dash_calendar_link where item_id=?
 
 delete.CalendarLinks.by.person.context = delete from dash_calendar_link where person_id=? and context_id=?
 
+delete.Config.by.id = delete from dash_config where id=?
+
+delete.Config.by.propertyName = delete from dash_config where property_name=?
+
 delete.NewsItem.by.id = delete from dash_news_item where id=?
 
 delete.NewsLink.by.personId.itemId = delete from dash_news_link where person_id=? and item_id=?
@@ -100,6 +112,8 @@ values (?, ?, ?, ?, ?, ?, ?, ?, ?)
 
 insert.CalendarLink = insert into dash_calendar_link (person_id, item_id, context_id, hidden, sticky) values \
 (?, ?, ?, ?, ?)
+
+insert.Config = insert into dash_config (property_name, property_value) values (?, ?)
 
 insert.Context = insert into dash_context (context_id, context_url, context_title) values (?, ?, ?)
 
@@ -421,6 +435,8 @@ from dash_calendar_link link join dash_person usr on usr.id=link.person_id join 
 join dash_context site on site.id=ci.context_id join dash_sourcetype st on st.id=ci.entity_type left join dash_repeating_event rep on ci.repeating_event_id=rep.id \
 where usr.sakai_id=? and site.context_id=? and link.sticky=1 order by ci.calendar_time asc
 
+select.Config.by.propertyName = select property_value from dash_config where property_name=?
+
 select.Context.by.id = select site.id as site_id, site.context_id as site_context_id,  \
 site.context_url as site_context_url, site.context_title as site_context_title from dash_context site where site.id=?
 
@@ -696,6 +712,10 @@ update.CalendarItem.title.calendarTime = update dash_calendar_item set title=?, 
 update.CalendarItemsLabelKey.entityReference.oldLabelKey = update dash_calendar_item set calendar_time_label_key=? where entity_ref=? and calendar_time_label_key=?
 
 update.CalendarLink = update dash_calendar_link set person_id=?, item_id=?, context_id=?, hidden=?, sticky=? where id=? 
+
+update.Config.id = update dash_config set property_name=?, property_value=? where id=?
+
+update.Config.propertyName = update dash_config set property_value=? where property_name=?
 
 update.Context.title = update dash_context set context_title=? where context_id=?
 
