--- a/bundles/resources/dash_entity.properties
+++ b/bundles/resources/dash_entity.properties
@@ -5,6 +5,7 @@ announcement.news.time = Date posted: {0}
 announcement.user.name = Posted by: {0}
 announcement.info.link = More info.
 announcement.grouped.title = {0} announcements added to {1}
+announcement.added = added
 
 assignment.data = Due: {due-time}. Accept until: {close-time}. {grade-type}.
 assignment.data.with.maxpoint = Due: {due-time}. Accept until: {close-time}. {grade-type}. Max points: {grade-max}.
@@ -25,6 +26,7 @@ assignment.submission.status = Status: {0}
 assignment.due.date = Due date:
 assignment.close.date = Accept until: 
 assignment.grouped.title = {0} assignments added to {1}
+assignment.added = added
 
 resource.user.name = Posted by: {0}
 resource.news.time = Date posted: {0}
