NOJIRA cleanup all the unneeded : marks from properties file
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@313023 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/bundles/resources/dash_entity.properties
+++ b/bundles/resources/dash_entity.properties
@@ -23,8 +23,8 @@ assignment.info.link = View in Site
 assignment.grade.type = Grade: {0} 
 assignment.max.grade = max ({0})
 assignment.submission.status = Status: {0}
-assignment.due.date = Due date:
-assignment.close.date = Accept until: 
+assignment.due.date = Due date
+assignment.close.date = Accept until 
 assignment.grouped.title = {0} assignments added to {1}
 assignment.added = added
 
@@ -41,22 +41,22 @@ schedule.info.link = View in Site
 schedule.news.time = Date posted: {0}
 schedule.metadata = Event date: {calendar-time}. Posted on {news-time}
 
-schedule.key1 = Academic Calendar: 
-schedule.key2 = Activity: 
-schedule.key3 = Cancellation: 
-schedule.key4 = Class section - Discussion: 
-schedule.key5 = Class section - Lab: 
-schedule.key6 = Class section - Lecture: 
-schedule.key7 = Class section - Small Group:  
-schedule.key8 = Class session:  
-schedule.key9 = Computer Session:  
-schedule.key10 = Deadline:  
-schedule.key11 = Exam: 
-schedule.key12 = Meeting: 
-schedule.key13 = Multidisciplinary Conference:  
-schedule.key14 = Quiz: 
-schedule.key15 = Special event:  
-schedule.key16 = Web Assignment:  
+schedule.key1 = Academic Calendar 
+schedule.key2 = Activity 
+schedule.key3 = Cancellation 
+schedule.key4 = Class section - Discussion
+schedule.key5 = Class section - Lab
+schedule.key6 = Class section - Lecture 
+schedule.key7 = Class section - Small Group  
+schedule.key8 = Class session
+schedule.key9 = Computer Session  
+schedule.key10 = Deadline
+schedule.key11 = Exam
+schedule.key12 = Meeting 
+schedule.key13 = Multidisciplinary Conference  
+schedule.key14 = Quiz
+schedule.key15 = Special event  
+schedule.key16 = Web Assignment  
 schedule.grouped.title = {0} events added to the {1} calendar
 
 dash.calendar.upcoming		= Upcoming
