DASH-33 DASH-77 Added util class for calculating date display (in util since it is needed in multiple places).
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@313024 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/pom.xml
+++ b/pom.xml
@@ -183,6 +183,7 @@
     <module>tool</module>
     <module>api</module>
     <module>impl</module>
+    <module>util</module>
     <module>pack</module>
   </modules>
 </project>
