DASH-33 DASH-77 Call DateUtil from tool code for panels.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@313028 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/bundles/resources/dash_entity.properties
+++ b/bundles/resources/dash_entity.properties
@@ -95,3 +95,13 @@ dash.show	= Show this
 
 dash.grouped.title = {0} items of type {1} added to the {2} site
 
+
+dash.date.minutes.ago = {0} minutes ago
+dash.date.hours.ago = {0} hours ago
+dash.date.today = Today 
+dash.date.today.time = Today {0}
+dash.date.tomorrow.time = Tomorrow {0}
+dash.date.yesterday = Yesterday 
+dash.date.unknown.time = Unknown time
+
+
