--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,11 @@
       			<version>1.0-SNAPSHOT</version>
       			<scope>runtime</scope>
     		</dependency>
+                <dependency>
+                        <groupId>org.sakaiproject.dash</groupId>
+                        <artifactId>dashboard-util</artifactId>
+                        <version>1.0-SNAPSHOT</version>
+                </dependency>
 			
                 <dependency>
                         <groupId>org.sakaiproject.dash</groupId>
