--- a/tool/pom.xml
+++ b/tool/pom.xml
@@ -26,6 +26,10 @@
             <groupId>org.sakaiproject.dash</groupId>
 			<artifactId>dashboard-bundles</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.sakaiproject.dash</groupId>
+			<artifactId>dashboard-util</artifactId>
+        </dependency>
 
     	
     	<!-- third party dependencies -->
