DASH-33 DASH-77 Fixed display of dates for past calendar items.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@313031 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/bundles/resources/dash_entity.properties
+++ b/bundles/resources/dash_entity.properties
@@ -102,6 +102,7 @@ dash.date.today = Today
 dash.date.today.time = Today {0}
 dash.date.tomorrow.time = Tomorrow {0}
 dash.date.yesterday = Yesterday 
+dash.date.yesterday.time = Yesterday {0} 
 dash.date.unknown.time = Unknown time
 
 
