DASH-99 Added ajax success messages to language bundles.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@313034 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/bundles/resources/dash_entity.properties
+++ b/bundles/resources/dash_entity.properties
@@ -107,4 +107,9 @@ dash.date.yesterday = Yesterday
 dash.date.yesterday.time = Yesterday {0} 
 dash.date.unknown.time = Unknown time
 
+dash.ajax.hide.success = Item is now hidden
+dash.ajax.show.success = Item is no longer hidden
+dash.ajax.star.success = Item is now starred
+dash.ajax.unstar.success = Item is no longer starred
+
 
