DASH-111 ScheduleSupport was not updating the repeating calendar item, in part because dashboard logic and dao did not support title update for repeating calendar item.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@313038 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/impl/src/resources/oracle.properties
+++ b/impl/src/resources/oracle.properties
@@ -519,3 +519,7 @@ update.NewsLink = update dash_news_link set person_id=?, item_id=?, context_id=?
 update.RepeatingEventsLabelKey.entityReference.oldLabelKey = update dash_repeating_event set calendar_time_label_key=? where entity_ref=? and calendar_time_label_key=?
 
 update.RepeatingEventsSubtype.entityReference.labelKey = update dash_repeating_event set subtype=? where entity_ref=? and calendar_time_label_key=?
+
+update.RepeatingEventsTitle.entityReference = update dash_repeating_event set title=? where entity_ref=? 
+
+
