DASH-111 Added methods for updating time of repeating event.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@313039 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/impl/src/resources/mysql.properties
+++ b/impl/src/resources/mysql.properties
@@ -733,6 +733,8 @@ update.RepeatingEventsLabelKey.entityReference.oldLabelKey = update dash_repeati
 
 update.RepeatingEventsSubtype.entityReference.labelKey = update dash_repeating_event set subtype=? where entity_ref=? and calendar_time_label_key=?
 
+update.RepeatingEventsTime.entityReference = update dash_repeating_event set news_time=? where entity_ref=? 
+
 update.RepeatingEventsTitle.entityReference = update dash_repeating_event set title=? where entity_ref=? 
 
 
