--- a/bundles/resources/dash_entity.properties
+++ b/bundles/resources/dash_entity.properties
@@ -3,7 +3,7 @@ announcement.metadata = Posted by {user-name} on {news-time}.
 announcement.attachments = Attachments: {0}
 announcement.news.time = Date posted: {0}
 announcement.user.name = Posted by: {0}
-announcement.info.link = More info.
+announcement.info.link = View in Site
 announcement.grouped.title = {0} announcements added to {1}
 announcement.added = added
 
@@ -30,7 +30,11 @@ assignment.added = added
 
 resource.user.name = Posted by: {0}
 resource.news.time = Date posted: {0}
-resource.info.link = Download this resource.
+resource.info.link.file = Download File 
+resource.info.link.text = View Text
+resource.info.link.html = View Page
+resource.info.link.url = Go to Site
+resource.info.link.citationlist = View Citation List
 resource.grouped.title = {0} resources added to {1}
 resource.added = added
 
