DASH-92 only show file size for uploaded resource files, not for other resource type
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@313044 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/bundles/resources/dash_entity.properties
+++ b/bundles/resources/dash_entity.properties
@@ -30,7 +30,7 @@ assignment.added = added
 
 resource.user.name = Posted by: {0}
 resource.news.time = Date posted: {0}
-resource.info.link.file = Download File 
+resource.info.link.file = Download File ({0} bytes)
 resource.info.link.text = View Text
 resource.info.link.html = View Page
 resource.info.link.url = Go to Site
