DASH-106 Added horizon properties to config service.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@313045 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/impl/src/resources/oracle.properties
+++ b/impl/src/resources/oracle.properties
@@ -24,6 +24,17 @@ unique (person_id, context_id, item_id) ); \
 create sequence dash_calendar_link_seq start with 1 increment by 1 nomaxvalue; \
 create index dash_calendar_link_idx on dash_calendar_link (person_id, context_id, item_id, hidden, sticky)
 
+create.Config.table = create table dash_config ( id number not null primary key, \
+property_name varchar2(99) not null, property_value number(10,0) not null ); \ 
+create unique index dash_config_name_idx on dash_config(property_name); \
+insert into dash_config (property_name, property_value) values ('PROP_DEFAULT_ITEMS_IN_PANEL', 5); \
+insert into dash_config (property_name, property_value) values ('PROP_DEFAULT_ITEMS_IN_DISCLOSURE', 20); \
+insert into dash_config (property_name, property_value) values ('PROP_DEFAULT_ITEMS_IN_GROUP', 2); \
+insert into dash_config (property_name, property_value) values ('PROP_REMOVE_ITEMS_AFTER_WEEKS', 52); \
+insert into dash_config (property_name, property_value) values ('PROP_REMOVE_STARRED_ITEMS_AFTER_WEEKS', 26); \
+insert into dash_config (property_name, property_value) values ('PROP_DAYS_BETWEEN_HORIZ0N_UPDATES', 1); \
+insert into dash_config (property_name, property_value) values ('PROP_WEEKS_TO_HORIZON', 4) 
+
 create.Context.table = create table dash_context \
 ( id number not null primary key, context_id varchar2(255) not null, \
 context_url varchar2(1024) not null, context_title varchar2(255) not null ); \
