--- a/impl/src/resources/mysql.properties
+++ b/impl/src/resources/mysql.properties
@@ -20,12 +20,15 @@ sticky bit default 0, unique (person_id, context_id, item_id), primary key (id) 
 create index dash_calendar_link_idx on dash_calendar_link (person_id, context_id, item_id, hidden, sticky)
 
 create.Config.table = create table if not exists dash_config ( id bigint not null auto_increment, \
-property_name varchar(99) not null, property_value integer not null ); \
+property_name varchar(99) not null, property_value integer not null, primary key (id) ); \
+create unique index dash_config_name_idx on dash_config(property_name); \
 insert into dash_config (property_name, property_value) values ('PROP_DEFAULT_ITEMS_IN_PANEL', 5); \
 insert into dash_config (property_name, property_value) values ('PROP_DEFAULT_ITEMS_IN_DISCLOSURE', 20); \
 insert into dash_config (property_name, property_value) values ('PROP_DEFAULT_ITEMS_IN_GROUP', 2); \
 insert into dash_config (property_name, property_value) values ('PROP_REMOVE_ITEMS_AFTER_WEEKS', 52); \
-insert into dash_config (property_name, property_value) values ('PROP_REMOVE_STARRED_ITEMS_AFTER_WEEKS', 26)
+insert into dash_config (property_name, property_value) values ('PROP_REMOVE_STARRED_ITEMS_AFTER_WEEKS', 26); \
+insert into dash_config (property_name, property_value) values ('PROP_DAYS_BETWEEN_HORIZ0N_UPDATES', 1); \
+insert into dash_config (property_name, property_value) values ('PROP_WEEKS_TO_HORIZON', 4) 
 
 create.Context.table = create table if not exists dash_context ( id bigint not null auto_increment, context_id varchar(255) not null, \
 context_url varchar(1024) not null, context_title varchar(255) not null, primary key (id) ); \
