DASH-86 Added div at top of page for MOTD
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@313046 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/impl/src/resources/mysql.properties
+++ b/impl/src/resources/mysql.properties
@@ -28,7 +28,8 @@ insert into dash_config (property_name, property_value) values ('PROP_DEFAULT_IT
 insert into dash_config (property_name, property_value) values ('PROP_REMOVE_ITEMS_AFTER_WEEKS', 52); \
 insert into dash_config (property_name, property_value) values ('PROP_REMOVE_STARRED_ITEMS_AFTER_WEEKS', 26); \
 insert into dash_config (property_name, property_value) values ('PROP_DAYS_BETWEEN_HORIZ0N_UPDATES', 1); \
-insert into dash_config (property_name, property_value) values ('PROP_WEEKS_TO_HORIZON', 4) 
+insert into dash_config (property_name, property_value) values ('PROP_WEEKS_TO_HORIZON', 4); \
+insert into dash_config (property_name, property_value) values ('PROP_MOTD_MODE', 1)
 
 create.Context.table = create table if not exists dash_context ( id bigint not null auto_increment, context_id varchar(255) not null, \
 context_url varchar(1024) not null, context_title varchar(255) not null, primary key (id) ); \
@@ -445,6 +446,12 @@ site.context_url as site_context_url, site.context_title as site_context_title f
 
 select.Context.by.contextId = select site.id as site_id, site.context_id as site_context_id,  \
 site.context_url as site_context_url, site.context_title as site_context_title from dash_context site where site.context_id=?
+
+select.motd.recent = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, ni.news_time_label_key as ni_news_time_label_key, \
+ni.entity_ref as ni_entity_ref, ni.subtype as ni_subtype, st.id as type_id, st.identifier as type_identifier, st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
+site.context_url as site_context_url, site.context_title as site_context_title \
+from dash_news_item ni join dash_context site on site.id=ni.context_id  \
+join dash_sourcetype st on st.id=ni.entity_type where site.context_id=? order by ni.news_time desc
 
 select.NewsItem.by.entityReference = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, ni.news_time_label_key as ni_news_time_label_key, \
 ni.entity_ref as ni_entity_ref, ni.subtype as ni_subtype, st.id as type_id, st.identifier as type_identifier, st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
